--- a/mavnet.html
+++ b/mavnet.html
@@ -71,6 +71,8 @@ const calendar = {
 "2026-02-18":"Gold",
 "2026-02-19":"Purple",
 "2026-02-20":"Gold",
+"2026-02-23":"Purple",
+"2026-02-24":"Gold",
 
 // add more dates here
 };
@@ -119,3 +121,4 @@ document.getElementById("statusText").innerHTML =
 
 </body>
 </html>
+
