--- a/mavnet.html
+++ b/mavnet.html
@@ -97,13 +97,56 @@ document.getElementById("dateBox").className="box none";
 
 // ===== RANDOM FACTS =====
 const facts = [
-"Assignments are timestamped exactly when submitted.",
-"Ultra-short-throw projectors can make a 100-inch image from inches away.",
-"Purple/Gold rotations keep class periods fair.",
-"Interactive pens use infrared tracking.",
-"Free GitHub Pages can host full websites.",
-"LED subway signs refresh hundreds of times per second.",
-"Learning systems at Virginia Tech log submission times automatically."
+
+"Learning systems at universities like Virginia Tech log the exact second an assignment is submitted.",
+"Ultra-short-throw projectors can make a 100-inch image from less than a foot away.",
+"Interactive projectors track pen position using infrared cameras.",
+"GitHub Pages can host a full website for free using only one HTML file.",
+"LED destination signs refresh hundreds of times per second so letters look solid.",
+"The London Underground has stations older than most electric railways.",
+"Some colleges automatically lock assignments at the deadline with no override.",
+"Projectors lose brightness as lamps age, even if they still turn on.",
+"Color-day rotations exist so no class always meets at the hardest time of day.",
+"Many subway maps are diagrammatic and not geographically accurate.",
+"Touch projectors must be recalibrated if the wall mount shifts even slightly.",
+"University attendance systems often sync with ID card scans.",
+"Short-throw projectors reduce shadows when teachers stand near the board.",
+"Learning management systems can detect late uploads automatically.",
+"Most classroom projectors run quieter in Eco mode.",
+"Some subway stations were built before elevators were invented.",
+"Digital whiteboard pens usually don’t use ink at all.",
+"Projector focus should be adjusted after warm-up, not immediately after power-on.",
+"Many universities expect students to check email daily.",
+"LED matrices use multiplexing to control thousands of lights with fewer wires.",
+"Some projectors store calibration data internally so moving them breaks alignment.",
+"College lecture recordings are often auto-uploaded overnight.",
+"Subway trains use destination signs so riders can identify short-turn trains.",
+"Projector filters need cleaning or airflow drops.",
+"Assignment timestamps are stored in server logs even if deleted later.",
+"Many subway systems have ghost platforms no longer in use.",
+"Interactive boards can detect multiple pens at once.",
+"GitHub keeps a history of every file change automatically.",
+"Universities rarely accept 'I didn’t see it online' as an excuse.",
+"Short-throw lenses are shaped differently than standard projector lenses.",
+"Some subway stations have curved platforms that require special mirrors.",
+"Projector keystone correction reduces image sharpness.",
+"Learning systems can show professors how long a quiz was open.",
+"Many colleges back up assignments automatically.",
+"LED boards on trains are readable in sunlight because of high refresh rates.",
+"Most classroom projectors are mounted slightly off-center on purpose.",
+"Subway maps often use 45° angles to stay readable.",
+"Online assignments usually save drafts automatically.",
+"Projector bulbs dim faster if turned on and off repeatedly.",
+"Some subway systems run maintenance trains overnight.",
+"Interactive pens communicate using infrared or ultrasonic signals.",
+"Universities keep records of grade changes for auditing.",
+"Projector screens reflect light differently depending on material.",
+"Some subway stations were renamed but locals still use the old names.",
+"MavNet reminders are more reliable than memory alone.",
+"Skye once recalibrated a projector faster than anyone expected.",
+"Everleigh still thinks engine noise improves focus.",
+"Consistency builds trust. Alarms build consistency."
+
 ];
 
 let fact = facts[Math.floor(Math.random()*facts.length)];
@@ -121,4 +164,5 @@ document.getElementById("statusText").innerHTML =
 
 </body>
 </html>
+
 
