--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body{
   <div class="box">
     <h2>💻 System Stats</h2>
     <p id="cpuUsage">CPU Usage: 34%</p>
-    <p id="memoryUsage">Memory Usage: 2.8GB / 8GB</p>
+    <!--<p id="memoryUsage">Memory Usage: 2.8GB / 8GB</p>-->
     <p id="diskSpace">Disk Space: 120GB / 256GB</p>
   </div>
 </div>
@@ -252,3 +252,4 @@ function applyPrefs() {
 
 </body>
 </html>
+
